--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,21 +11,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HelloAndroid"
-        tools:targetApi="31" >
-
+        tools:targetApi="31">
+        <activity
+            android:name=".CounterActivity"
+            android:exported="false"
+            android:label="@string/title_activity_counter"
+            android:theme="@style/Theme.HelloAndroid" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".SecondActivity"
             android:exported="true" />
-
     </application>
 
 </manifest>
